<resources>
    <string name="app_name">TAL Ping Pong</string>
    <string name="login_success">Logged in!</string>
    <string name="login_error">Login error %1$s</string>
    <string name="challenge_user">Challenge user</string>
    <string name="user_details">User Details</string>
    <string name="challenge">Challenge</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="user_stats">Matches won: %1$d\nMatches lost: %2$d\nMatches win rate: %3$s</string>
    <string name="matches_won">Matches won: %1$d</string>
    <string name="matches_lost">Matches lost: %1$d</string>
    <string name="matches_win_rate">Matches win rate: %1$s</string>

    <string name="x_stats">%1$s\'s stats</string>
    <string name="x_matches_won">%1$s\'s matches won: %2$d</string>
    <string name="x_matches_lost">%1$s\'s matches lost: %2$d</string>
    <string name="x_matches_win_rate">%1$s\'s matches win rate: %2$s</string>

    <string name="your_stats">Your stats</string>
    <string name="your_matches_won">Your matches won: %1$d</string>
    <string name="your_matches_lost">Your matches lost: %1$d</string>
    <string name="your_matches_win_rate">Your matches win rate: %1$s</string>

    <string name="win_chances">Win chances: %1$s</string>
    <string name="user_rank">General rank: %1$d</string>
    <string name="invalid_time_in_the_past">Please select a time in the future</string>
    <string name="failed_to_load_users_list">Failed to load users list</string>
    <string name="no_match_history">No match history</string>
    <string name="upcoming_matches">Upcoming</string>
    <string name="past_matches">Past</string>
    <string name="no_matches_yet">Nothing to show here…</string>
    <string name="accept">Accept</string>
    <string name="low">Low</string>
    <string name="winning_chances">Your winning chances</string>
    <string name="high">High</string>
    <string name="incoming_challenge">Incoming challenge</string>
    <string name="unknown">Unknown</string>
    <string name="challenge_accepted">Challenge accepted!</string>
    <string name="challenge_declined">Challenge declined</string>
    <string name="failed_to_accept_challenge">Failed to accept challenge, please try again</string>
    <string name="failed_to_decline_challenge">Failed to decline challenge, please try again</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="logout">Logout</string>
    <string name="decline">Decline</string>
    <string name="confirmed">Confirmed</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="unconfirmed_matches">Unconfirmed</string>
    <string name="not_played">Not played</string>
    <string name="edit_match_details">Edit match details</string>
    <string name="edit">Edit</string>
    <string name="edit_request_sent">Edit request sent!</string>
    <string name="edit_decline_failed">Something went wrong while declining the edit request, please try again.</string>
    <string name="edit_request_send_failed">Something went wrong while editing the match, please try again.</string>
    <string name="changes_requested_by_x">Changes requested by %1$s</string>
    <string name="network_error_message">Something went wrong\nPlease try again</string>
    <string name="edit_accepted">Edit accepted!</string>
    <string name="me">me</string>
    <string name="new_championship">New championship</string>
    <string name="new_doubles_match">New doubles match</string>
    <string name="new_singles_match">New singles match</string>
    <string name="select_a_rival_from_the_list">Select a rival from the list</string>
    <string name="match_request_sent">Match request sent!</string>
    <string name="match_request_failed">Match request failed, please try again later</string>
    <string name="remove">Remove</string>
    <string name="decline_reasons">Decline reasons</string>
    <string name="confirm">Confirm</string>
    <string name="edit_declined">Edit declined!</string>
    <string name="me_capital">Me</string>
    <string name="success_rate">Success rate</string>
    <string name="some_participants_are_missing">Some participants are missing</string>
    <string name="local">Local</string>
    <string name="visitors">Visitors</string>
    <string name="visitor">Visitor</string>
    <string name="locals">Locals</string>
    <string name="matches">Matches</string>
    <string name="find_a_rival">Find a Rival</string>
    <string name="ranking">Ranking</string>
    <string name="profile">Profile</string>
    <string name="vs_capital">VS</string>
    <string name="score_0">0</string>
    <string name="login_message">Sign in with your google account to start sharing your Ping Pong progress and challenge others!</string>
    <string name="lose_initial">L</string>
    <string name="win_initial">W</string>
    <string name="email">Email</string>
    <string name="last_30_days_stats">Last 30 days stats</string>
    <string name="matches_won_unformatted">Matches won</string>
    <string name="matches_lost_unformatted">Matches lost</string>
    <string name="matches_win_rate_unformatted">Matches win rate</string>
    <string name="last_10_matches">Last 10 matches</string>
    <string name="select_user">Select a user</string>
    <string name="filter_users">Filter users…</string>
    <string name="select_users">Select users</string>
    <string name="championship_name">Championship name</string>
    <string name="championship_created">Championship created!</string>
    <string name="championship_creation_failed">Failed to create championship, please try again</string>
    <string name="invalid_championship_time">Invalid championship date/time</string>
    <string name="invalid_championship_name">Invalid championship name</string>
    <string name="invalid_championship_users_list">Please select at least 4 users</string>
    <string name="events">Events</string>
    <string name="no_championships_yet">Nothing to show here…</string>
    <string name="championship_details">Championship Details</string>
    <string name="started_on_x">Started on %1$s</string>
    <string name="starts_on_x">Starts on %1$s</string>
    <string name="created_by_x">Created by %1$s</string>
    <string name="championship_x">Championship: %1$s</string>
    <string name="new_match_record">New match record</string>
    <string name="add">Add</string>
    <string name="match_creation_failed">Match creation failed, please try again later</string>
    <string name="match_created_successfully">Match created successfully!</string>
    <string name="invalid_score">Invalid score</string>
    <string name="please_wait">Please wait…</string>
    <string name="match_edited">Match edited!</string>
    <string name="team">Team</string>
    <string name="player">Player</string>
    <string name="declined">Declined</string>
    <string name="victory">Victory!</string>
    <string name="defeat">Defeat</string>
    <string name="not_played_yet">Not played yet</string>

    <plurals name="x_members">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>

    <plurals name="x_users_selected">
        <item quantity="one">%d user selected</item>
        <item quantity="other">%d users selected</item>
    </plurals>
</resources>
