<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_criteria_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/filter_users"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_criteria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_criteria_input_layout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/users_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AA000000" />

        <LinearLayout
            android:id="@+id/new_championship_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/new_button"
            app:layout_constraintEnd_toEndOf="@+id/new_button"
            app:layout_constraintTop_toTopOf="@+id/new_button">

            <TextView
                android:id="@+id/new_championship_button_label"
                style="@style/ui_textview_title_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/new_championship"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/new_championship_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_championship" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_doubles_match_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/new_button"
            app:layout_constraintEnd_toEndOf="@+id/new_button"
            app:layout_constraintTop_toTopOf="@+id/new_button">

            <TextView
                android:id="@+id/new_doubles_match_button_label"
                style="@style/ui_textview_title_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/new_doubles_match"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/new_doubles_match_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_doubles" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_singles_match_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/new_button"
            app:layout_constraintEnd_toEndOf="@+id/new_button"
            app:layout_constraintTop_toTopOf="@+id/new_button">

            <TextView
                android:id="@+id/new_singles_match_button_label"
                style="@style/ui_textview_title_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/new_singles_match"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/new_singles_match_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_singles" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_plus"
            android:tint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
